--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -13,6 +13,65 @@
 
 /*
 =====================================
+List post style
+=====================================
+*/
+.list-post-style {
+  display: flex;
+  padding: 1rem 0;
+
+  &.list-post-dark {
+    .list-post-style-content {
+      a {
+        color: $color-gray-800;
+
+        &:hover {
+          color: $color-dark;
+        }
+      }
+
+      span {
+        color: $color-gray-500;
+      }
+    }
+  }
+
+  .list-post-style-img {
+    a {
+      display: block;
+      width: 5rem;
+      margin-left: 1rem;
+
+      img {
+        width: 100%;
+        height: 5rem;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  .list-post-style-content {
+
+    h3 {
+      a {
+        font-size: 0.8rem;
+        color: $color-gray-300;
+
+        &:hover {
+          color: $color-white;
+        }
+      }
+    }
+
+    span {
+      font-size: 0.7rem;
+      color: $color-gray-600;
+    }
+  }
+}
+
+/*
+=====================================
 Header blog
 =====================================
 */
@@ -142,7 +201,7 @@ Search form
 #search-form {
   background: $color-white;
   display: none;
-  padding: 3rem 2rem;
+  padding: 4rem 2rem;
 
   @media screen and (max-width: 991px) {
     padding: 2rem 0;
@@ -157,6 +216,7 @@ Search form
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
+    position: relative;
 
     .search-input {
       border: 0;
@@ -205,6 +265,18 @@ Search form
         transition: 0.3s;
         display: none;
       }
+    }
+
+    // Search results
+    .search-results {
+      // @extend %box-style;
+      position: absolute;
+      top: 100%;
+      right: 0;
+      width: 100%;
+      padding: 2rem;
+      background: $color-gray-100;
+      z-index: 4;
     }
   }
 }
@@ -750,52 +822,6 @@ Footer blog
           transition: 0.3s;
           font-size: 0.5rem;
           font-weight: bold;
-        }
-      }
-    }
-
-    // Latest posts
-    .footer-latest-posts {
-      ul {
-        li {
-          display: flex;
-
-          &:not(:last-child) {
-            margin-bottom: 2rem;
-          }
-
-          .footer-latest-posts-img {
-            a {
-              display: block;
-              width: 5rem;
-
-              img {
-                width: 100%;
-                height: 5rem;
-                border-radius: 50%;
-              }
-            }
-          }
-
-          .footer-latest-posts-content {
-            margin-right: 1rem;
-
-            h3 {
-              a {
-                font-size: 0.8rem;
-                color: $color-gray-300;
-
-                &:hover {
-                  color: $color-white;
-                }
-              }
-            }
-
-            span {
-              font-size: 0.7rem;
-              color: $color-gray-600;
-            }
-          }
         }
       }
     }
