dev of main heading & focus of search input

--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -182,8 +182,12 @@ Header blog
     .heading-main-info {
       h1 {
         font-size: 2rem;
-        color: $color-white;
         margin: 0;
+        color: $color-white;
+        
+        a {
+          color: $color-white;
+        }
       }
 
       p {
