dev a few details

--- a/src/css/modules/front.scss
+++ b/src/css/modules/front.scss
@@ -131,8 +131,8 @@ Header
       position: relative;
       z-index: 3;
 
-      // Nav toggle
-      #nav-toggle {
+      // Nav open
+      #nav-open {
         background: transparent;
         position: relative;
         display: flex;
