--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -373,28 +373,82 @@ Blog content
     width: 100%;
     transition: all 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
   }
+}
 
-  // Post categories
-  .post-categories {
+// Post slider
+.post-slider {
+  .post-slider-link {
+    display: block;
+    position: relative;
+  }
+
+  .post-image-slider-buttons {
     position: absolute;
-    right: 1rem;
-    bottom: 1rem;
+    top: 0;
+    left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
-    flex-wrap: wrap;
     z-index: 3;
 
-    span {
-      background: $color-dark-transparent-low;
+    &>div[class*='post-image'] {
+      width: 3rem;
+      height: 3rem;
+      background: rgba(0, 0, 0, 0.6);
       color: $color-white;
-      font-size: 0.7rem;
-      padding: 0.25rem 1rem;
-      border-radius: 3rem;
-      margin-top: 0.25rem;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      text-align: center;
+      font-weight: bold;
+      font-size: 0.8rem;
 
-      &:not(:last-child) {
-        margin-left: 0.25rem;
+      &.swiper-button-disabled {
+        color: $color-gray-600;
+        cursor: default;
       }
+    }
+  }
+}
+
+// Post video
+#content #posts .post .post-video video {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+// Post categories
+.post-categories {
+  position: absolute;
+  right: 1rem;
+  bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  z-index: 3;
+
+  span {
+    background: $color-dark-transparent-low;
+    color: $color-white;
+    font-size: 0.7rem;
+    padding: 0.25rem 1rem;
+    border-radius: 3rem;
+    margin-top: 0.25rem;
+
+    &:not(:last-child) {
+      margin-left: 0.25rem;
     }
   }
 }
