--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -432,11 +432,12 @@ Blog content
 // Post categories
 .post-categories {
   position: absolute;
-  right: 1rem;
-  bottom: 1rem;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding: 1rem;
   z-index: 3;
 
   span {
@@ -618,6 +619,20 @@ Blog content
   h6 {
     font-size: 1rem;
   }
+
+  // Gallery style
+  .gallery {
+    .gallery-item {
+      .gallery-icon {
+        a {
+          display: block;
+          img {
+            height: inherit;
+          }
+        }
+      }
+    }
+  }
 }
 
 // Post list options
@@ -702,18 +717,20 @@ Blog content
     margin-left: 0.25rem;
     margin-bottom: 0.25rem;
 
-    &:hover {
-      background: $color-gray-300;
-      opacity: 1;
-      color: $color-dark;
-    }
-
-    i {
+    &::before {
+      content: '\ebb4';
+      font-family: $font-family-icons;
       line-height: inherit;
       background: $color-gray-500;
       color: $color-white;
       padding: 0 0.5rem;
       margin-left: 1rem;
+    }
+
+    &:hover {
+      background: $color-gray-300;
+      opacity: 1;
+      color: $color-dark;
     }
   }
 }
