--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -332,12 +332,12 @@ Blog content
   background: $color-white;
   margin-bottom: 30px;
   @extend %box-style;
+}
 
-  // Post image
-  .post-image {
-    a.post-image-link {
-      display: block;
-    }
+// Post image
+.post-image {
+  a.post-image-link {
+    display: block;
   }
 }
 
@@ -869,9 +869,96 @@ Related post
 */
 .related-post {
   padding-top: calc(6rem - 30px);
+  padding-bottom: 3rem;
 
   .related-post-slider {
     position: relative;
+  }
+}
+
+/*
+=====================================
+Comments list
+=====================================
+*/
+.comments-list {
+  .comment {
+    margin-bottom: 15px;
+    
+    .comment-avatar {
+      width: 5rem;
+      float: right;
+      
+      img {
+        width: 100%;
+        height: 5rem;
+        border-radius: 0.25rem;
+      }
+    }
+    
+    .comment-content {
+      margin-right: 7rem;
+      background: $color-white;
+      padding: 1rem;
+      position: relative;
+
+      &:before {
+        content: '';
+        border-width: 0.75rem 1rem;
+        border-style: solid;
+        border-color: transparent transparent transparent $color-white;
+        position: absolute;
+        top: 2rem;
+        right: -2rem;
+      }
+      
+      .comment-heading {
+        display: flex;
+        justify-content: space-between;
+
+        b {
+          font-size: 0.9rem;
+          color: $color-dark;
+        }
+
+        .comment-reply {
+          display: flex;
+          font-size: 0.7rem;
+
+          a {
+            color: $color-primary;
+            margin-right: 0.5rem;
+            background: $color-gray-200;
+            padding: 0 0.5rem;
+
+            &:hover {
+              background: $color-gray-300;
+            }
+          }
+        }
+      }
+
+      .comment-body {
+        padding-top: 0.25rem;
+
+        p {
+          font-size: 0.8rem;
+          color: $color-gray-700;
+          margin-bottom: 0.25rem;
+        }
+      }
+
+      .comment-options {
+        .date {
+          font-size: 0.7rem;
+          color: $color-gray-500;
+        }
+      }
+    }
+  }
+
+  &>.children {
+    padding-right: 7rem;
   }
 }
 
