--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -1,16 +1,3 @@
-%box-style {
-  -webkit-box-shadow: 0px 15px 45px -9px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 15px 45px -9px rgba(0, 0, 0, 0.2);
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s;
-
-  &:not(.search-box):hover {
-    -webkit-box-shadow: none;
-    box-shadow: none;
-  }
-}
-
 /*
 =====================================
 List post style
@@ -212,7 +199,6 @@ Search form
   }
 
   .search-box {
-    @extend %box-style;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -273,7 +259,6 @@ Search form
 
     // Search results
     .search-results {
-      // @extend %box-style;
       position: absolute;
       top: 100%;
       right: 0;
@@ -331,7 +316,6 @@ Blog content
 .post-box {
   background: $color-white;
   margin-bottom: 30px;
-  @extend %box-style;
 }
 
 // Post image
@@ -819,7 +803,7 @@ Blog content
 }
 
 #blog-content {
-  background: $color-gray-200;
+  background: $color-gray-100;
   padding: 6rem 0;
 
   // All posts, grid masonry (main)
@@ -841,9 +825,8 @@ Blog content
 
     a,
     span {
-      @extend %box-style;
       background: $color-white;
-      padding: 0.75rem 1rem;
+      padding: 0.5rem 1rem;
       font-size: 0.8rem;
       color: $color-gray-800;
       border-radius: 0.25rem;
@@ -868,7 +851,6 @@ Related post
 =====================================
 */
 .related-post {
-  padding-top: calc(6rem - 30px);
   padding-bottom: 3rem;
 
   .related-post-slider {
@@ -960,6 +942,12 @@ Comments list
   &>.children {
     padding-right: 7rem;
   }
+}
+
+.text-description {
+  font-size: 0.8rem;
+  color: $color-gray-700;
+  margin: 0.5rem 0;
 }
 
 /*
