--- a/src/css/modules/inputs.scss
+++ b/src/css/modules/inputs.scss
@@ -56,6 +56,7 @@ input[type='search'],
 input[type='url'],
 select,
 textarea {
+  background: $color-white;
   border: solid 1px $color-gray-200;
   color: inherit;
   font-family: $font-family-pack;
