--- a/src/css/modules/front.scss
+++ b/src/css/modules/front.scss
@@ -6,6 +6,20 @@
   animation-direction: alternate;
 }
 
+.button-default {
+  background: transparent;
+  padding: 0;
+  margin: 0;
+  border: none;
+  outline: none;
+  box-shadow: none;
+
+  &:hover {
+    background: none;
+    color: none;
+  }
+}
+
 /*
 =====================================
 Navigation
@@ -131,50 +145,57 @@ Header
       position: relative;
       z-index: 3;
 
-      // Nav open
-      #nav-open {
-        background: transparent;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        padding: 0;
-        margin: 0;
+      .main-menu-items {
         margin-right: auto;
-        border: none;
-        box-shadow: none;
-        width: 3rem;
+        display: flex;
 
-        span {
-          width: 100%;
-          height: 2px;
-          background: $color-white;
-          display: block;
-          margin-right: auto;
-
-          &:not(:last-child) {
-            margin-bottom: 0.75rem;
+        // Nav open
+        #nav-open {
+          position: relative;
+          display: flex;
+          flex-direction: column;
+          width: 2.5rem;
+  
+          span {
+            width: 100%;
+            height: 2px;
+            background: $color-white;
+            display: block;
+            margin-right: auto;
+  
+            &:not(:last-child) {
+              margin-bottom: 0.5rem;
+            }
+  
+            &:first-child {
+              transition: all 0.6s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+              width: 60%;
+            }
+  
+            &:last-child {
+              transition: all 0.4s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+              width: 50%;
+            }
+  
+            &:nth-child(2) {
+              transition: all 0.2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+              width: 80%;
+            }
           }
-
-          &:first-child {
-            transition: all 0.6s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-            width: 60%;
-          }
-
-          &:last-child {
-            transition: all 0.4s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-            width: 50%;
-          }
-
-          &:nth-child(2) {
-            transition: all 0.2s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-            width: 80%;
+  
+          &.active span {
+            width: 100%;
           }
         }
 
-        &.active span {
-          width: 100%;
+        // Search alt
+        #search-alt {
+          font-size: 1.4rem;
+          line-height: 1;
+          margin-left: 0.5rem;
         }
       }
+
     }
 
     // Banner
