--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -144,6 +144,13 @@ Header blog
               &:hover {
                 color: $color-white;
               }
+
+              &.search-alt {
+                &:hover {
+                  color: $color-primary;
+                  cursor: pointer;
+                }
+              }
             }
           }
         }
@@ -236,7 +243,7 @@ Search form
         background: $color-gray-300;
       }
 
-      #spinner-alt-form {
+      #spinner-alt {
         width: 1.5rem;
         height: 1.5rem;
         border-radius: 50%;
@@ -406,6 +413,31 @@ Blog content
   object-fit: cover;
 }
 
+// Post categories
+.post-categories {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 1rem;
+  z-index: 3;
+
+  span {
+    background: $color-dark-transparent-low;
+    color: $color-white;
+    font-size: 0.7rem;
+    padding: 0.25rem 1rem;
+    border-radius: 3rem;
+    margin-top: 0.25rem;
+
+    &:not(:last-child) {
+      margin-left: 0.25rem;
+    }
+  }
+}
+
 // Post category (Without thumbnail)
 .post-category {
   margin-bottom: 1rem;
@@ -414,24 +446,27 @@ Blog content
   flex-wrap: wrap;
 
   a {
-    color: $color-dark;
+    background: $color-gray-900;
+    color: $color-white;
     font-size: 0.7rem;
+    padding: 0.25rem 1rem;
+    border-radius: 3rem;
     margin-bottom: 0.25rem;
-    font-weight: bold;
-  }
 
-  span {
-    margin-right: 0.5rem;
-    margin-left: 0.5rem;
+    &:hover {
+      background: $color-darker;
+    }
 
-    &:last-child {
-      display: none;
+    &:not(:last-child) {
+      margin-left: 0.25rem;
     }
   }
 }
 
 // Post heading
 .post-heading {
+  margin-bottom: 1rem;
+
   span {
     font-size: 0.7rem;
     color: $color-gray-900;
@@ -458,7 +493,7 @@ Blog content
 
 // Post text
 .post-text {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   color: $color-gray-700;
   margin-bottom: 1rem;
 
@@ -610,11 +645,15 @@ Blog content
 
 // Post author
 .post-author {
-  margin-bottom: 1rem;
-
   &>div {
     display: flex;
+    padding: 1rem;
+    background: $color-gray-100;
     transition: 0.3s;
+
+    &:hover {
+      background: transparent;
+    }
 
     img {
       width: 4rem;
