seperate search & create module them

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,5 +6,6 @@
 @import 'modules/inputs';
 @import 'modules/btn';
 @import 'modules/extra';
+@import 'modules/search';
 @import 'modules/front';
 @import 'modules/blog';
