--- a/src/css/modules/extra.scss
+++ b/src/css/modules/extra.scss
@@ -182,7 +182,7 @@ Init grid masonry
 
     @media screen and (min-width: 1200px) {
       & {
-        width: 33.3333333%;
+        width: 50%;
       }
     }
   }
