--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -784,14 +784,14 @@ Sidebar & wp widgets
   padding: 2rem;
 }
 
-.widget-title {
+.widget-title, .box-title {
   font-size: 1rem;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   font-weight: normal;
 }
 
-// Latest posts
+// Wp block latest posts
 
 .wp-block-latest-posts {
   li {
@@ -838,14 +838,15 @@ Sidebar & wp widgets
   }
 }
 
-// Categories list
+// Wp block categories list
 
-.wp-block-categories {
-  &>li.cat-item:first-child {
+.wp-block-categories, .wp-block-page-list, .box-holder ul:not([class]) {
+  &>li.cat-item:first-child, &>li:first-child, &>li.wp-block-pages-list__item {
     border-top: none;
   }
 
-  .cat-item {
+  .cat-item,
+  .wp-block-pages-list__item, li {
     font-size: 0.7rem;
     color: $color-primary;
     border-top: 1px solid $color-gray-200;
@@ -876,6 +877,114 @@ Sidebar & wp widgets
 
     .children {
       padding-right: 1rem;
+    }
+  }
+}
+
+// Wp block search
+
+.wp-block-search {
+  // Label
+  &__label {
+    font-size: 0.8rem;
+    color: $color-gray-600;
+  }
+
+  // Inside (Holder)
+  &__inside-wrapper {
+    border-color: $color-gray-200;
+    padding: 4px !important;
+    margin: 0 !important;
+  }
+
+  &__input {
+    height: inherit;
+    color: $color-gray-700;
+    font-size: 0.8rem;
+    padding: 0 1rem !important;
+
+    &::placeholder {
+      color: $color-gray-700;
+      font-size: 0.8rem;
+    }
+  }
+
+  &__button {
+    height: inherit;
+    background: none;
+    border: 0;
+    outline: none;
+    margin: 0;
+    padding: 1rem !important;
+    background: $color-gray-200;
+    font-size: 0.8rem;
+
+    &:hover {
+      background: $color-gray-300;
+      color: $color-dark;
+    }
+  }
+}
+
+// Wp block tag cloud
+
+.list-tags,
+.wp-block-tag-cloud {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-top: 1rem;
+
+  a {
+    font-size: 0.7rem;
+    background: $color-darker;
+    color: $color-white;
+    padding: 0.25rem 0.5rem;
+    margin: 0.125rem;
+  }
+}
+
+// Wp block latest comments
+
+.wp-block-latest-comments {
+  // Item
+  &__comment {
+    border-bottom: 1px solid $color-gray-200;
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+    // &-avatar {
+      
+    // }
+
+    // Holder of author & link
+    &-meta {
+      font-size: 0.8rem;
+      color: $color-gray-700;
+    }
+
+    // Author
+    &-author {
+      font-size: 0.8rem;
+      color: $color-dark;
+    }
+
+    // Post text & link
+    &-link {
+      font-size: 0.8rem;
+      color: $color-primary;
+
+      &:hover {
+        color: $color-primary;
+      }
+    }
+
+    // Excerpt
+    &-excerpt {
+      font-size: 0.8rem;
+      color: $color-gray-700;
     }
   }
 }
@@ -1058,22 +1167,6 @@ Footer blog
             color: $color-primary;
           }
         }
-      }
-    }
-
-    // Tags
-    .footer-tags {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      padding-top: 1rem;
-
-      a {
-        font-size: 0.7rem;
-        background: $color-darker;
-        color: $color-white;
-        padding: 0.25rem 0.5rem;
-        margin: 0.125rem;
       }
     }
   }
