--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -633,84 +633,86 @@ Blog content
 }
 
 // Share & like
-.share-like {
-  padding-top: 1rem;
 
-  // Holder
-  .share-like-holder {
+// Holder
+.post-like {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 1rem;
+
+  // Like
+  .like-button {
+    margin: 0;
+    padding: 0;
+    background: $color-gray-200;
+    border: 0;
+    outline: 0;
+    color: $color-gray-900;
+    line-height: inherit;
+    overflow: hidden;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
 
-    // Like
-    .like-button {
-      margin: 0;
-      padding: 0;
-      background: $color-gray-300;
-      border: 0;
-      outline: 0;
-      color: $color-gray-900;
-      line-height: inherit;
-      overflow: hidden;
-
-      &:hover {
-        i {
-          background: $color-gray-300;
-        }
-      }
-
-      i {
-        line-height: inherit;
-        padding: 0 1rem;
-        transition: 0.3s;
-        color: $color-dark;
-        background: $color-gray-400;
-      }
+    &:hover {
+      background: $color-gray-400;
     }
 
-    // Social media
-    .social-media {
-      display: flex;
+    i {
+      padding: 0 1rem;
+      transition: 0.3s;
+      color: $color-dark;
       background: $color-gray-400;
-      justify-content: center;
-      overflow: hidden;
-      border-radius: 3rem;
-      padding-left: 1rem;
-      height: 2.5rem;
-      line-height: 2.5rem;
+      display: flex;
       align-items: center;
+      align-self: stretch;
+    }
 
-      &>span {
-        background: $color-gray-200;
-        padding: 0 1rem;
-        margin-left: 0.5rem;
-        line-height: inherit;
-        font-size: 0.7rem;
-        color: $color-primary;
-        border-top-left-radius: 1.5rem;
-        border-bottom-left-radius: 1.5rem;
-      }
+    span {
+      padding: 0 1rem;
+      margin-left: 0.5rem;
+      font-size: 0.7rem;
+      color: $color-dark;
+    }
 
-      a {
-        line-height: 1rem;
-        padding: 0 0.5rem;
-        font-size: 0.7rem;
-        display: flex;
-        align-items: center;
-        position: relative;
-        overflow: hidden;
-        transition: none;
+    .like-count {
+      font-style: normal;
+      font-size: inherit;
+      margin-right: 0.5rem;
+    }
+  }
+}
 
-        &:hover {
-          opacity: 1;
-          color: inherit;
-        }
+// Post share
+.post-share {
+  display: flex;
+  background: $color-gray-400;
+  justify-content: center;
+  overflow: hidden;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  align-items: center;
+  padding: 0 1rem;
 
-        span {
-          position: absolute;
-          right: 2rem;
-          white-space: nowrap;
-        }
-      }
+  a {
+    line-height: 1rem;
+    padding: 0 0.5rem;
+    font-size: 0.7rem;
+    display: flex;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    transition: none;
+
+    &:hover {
+      opacity: 1;
+      color: inherit;
+    }
+
+    span {
+      position: absolute;
+      right: 2rem;
+      white-space: nowrap;
     }
   }
 }
