--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -654,15 +654,49 @@ Blog content
     align-items: center;
     justify-content: center;
 
+    &[data-exists=yes] {
+      & {
+        background: $color-gray-300;
+      }
+      .like-heart-no {
+        display: none !important;
+      }
+      .like-heart-yes {
+        display: flex !important;
+      }
+      .text-heart-no {
+        display: none !important;
+      }
+      .text-heart-yes {
+        display: flex !important;
+      }
+    }
+
+    .like-heart-no {
+      display: flex;
+    }
+
+    .like-heart-yes {
+      display: none;
+    }
+
+    .text-heart-no {
+      display: flex !important;
+    }
+
+    .text-heart-yes {
+      display: none !important;
+    }
+
     &:hover {
-      background: $color-gray-400;
+      background: $color-gray-300;
     }
 
     i {
       padding: 0 1rem;
       transition: 0.3s;
-      color: $color-dark;
-      background: $color-gray-400;
+      color: $color-primary;
+      background: $color-gray-300;
       display: flex;
       align-items: center;
       align-self: stretch;
@@ -671,8 +705,13 @@ Blog content
     span {
       padding: 0 1rem;
       margin-left: 0.5rem;
-      font-size: 0.7rem;
+      font-size: 0.8rem;
       color: $color-dark;
+      display: flex;
+
+      cite {
+        font-style: normal;
+      }
     }
 
     .like-count {
