--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -411,7 +411,7 @@ Blog content
   margin-bottom: 1rem;
 
   p {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 
     em,
     i {
@@ -495,26 +495,38 @@ Blog content
 
   h1 {
     font-size: 1.25rem;
+    margin-bottom: 1rem;
+    color: $color-dark;
   }
 
   h2 {
     font-size: 1.2rem;
+    margin-bottom: 1rem;
+    color: $color-dark;
   }
 
   h3 {
     font-size: 1.15rem;
+    margin-bottom: 1rem;
+    color: $color-dark;
   }
 
   h4 {
     font-size: 1.1rem;
+    margin-bottom: 1rem;
+    color: $color-dark;
   }
 
   h5 {
     font-size: 1.05rem;
+    margin-bottom: 1rem;
+    color: $color-dark;
   }
 
   h6 {
     font-size: 1rem;
+    margin-bottom: 1rem;
+    color: $color-dark;
   }
 
   // Gallery style
