increase level of dev wp block & redesign comments

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -9,4 +9,5 @@
 @import 'modules/search';
 @import 'modules/front';
 @import 'modules/blog';
+@import 'modules/comments';
 @import 'modules/blocks';
