--- a/src/css/modules/blocks.scss
+++ b/src/css/modules/blocks.scss
@@ -31,25 +31,23 @@ Wp blocks
       padding-bottom: 0;
     }
 
-    a {
+    &>a {
       font-size: 0.8rem;
       color: $color-gray-800;
-      display: block;
-
-      &::before {
-        content: '\ea5a';
-        font-family: $font-family-icons;
-        margin-left: 0.5rem;
-        font-size: 0.5rem;
-        display: inline-block;
-      }
 
       &:hover {
         color: $color-dark;
+      }
+    }
 
-        &::before {
-          @extend %animation-left-to-right;
-        }
+    .wp-block-latest-posts__featured-image {
+      float: right;
+      padding-left: 1rem;
+      padding-bottom: 1rem;
+
+      img {
+        border-radius: 50%;
+        max-width: 100%;
       }
     }
 
@@ -60,6 +58,11 @@ Wp blocks
 
     .wp-block-latest-posts__post-date {
       font-size: 0.6rem;
+      color: $color-gray-600;
+    }
+
+    .wp-block-latest-posts__post-excerpt {
+      font-size: 0.7rem;
       color: $color-gray-600;
     }
   }
@@ -234,6 +237,57 @@ Wp blocks
       font-size: 0.8rem;
       color: $color-gray-700;
       padding-right: 0.5rem;
+    }
+  }
+}
+
+// Wp block video
+
+.wp-block-video {
+  figcaption {
+    font-size: 0.8rem;
+    color: $color-gray-800;
+  }
+}
+
+// Wp block quote
+
+.wp-block-quote {
+  background: $color-gray-100;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border-right: 4px dashed $color-gray-600;
+  font-size: 0.8rem;
+
+  p {
+    &::before {
+      content: '"';
+      margin-left: 0.25rem;
+      color: $color-primary;
+      font-size: 1rem;
+    }
+
+    &::after {
+      content: '"';
+      margin-right: 0.25rem;
+      color: $color-primary;
+      font-size: 1rem;
+    }
+  }
+
+  cite {
+    font-size: 0.7rem;
+    font-style: italic;
+    color: $color-dark;
+
+    &::before {
+      content: '~';
+      font-family: $font-family-icons;
+      position: relative;
+      top: 2px;
+      margin-left: 0.5rem;
+      color: $color-primary;
     }
   }
 }
