add author profile to archive author

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -10,4 +10,5 @@
 @import 'modules/front';
 @import 'modules/blog';
 @import 'modules/comments';
+@import 'modules/author-profile';
 @import 'modules/blocks';
