alignment gallery post content

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,4 +11,5 @@
 @import 'modules/blog';
 @import 'modules/comments';
 @import 'modules/author-profile';
+@import 'modules/gallery';
 @import 'modules/blocks';
