reclassify scss modules & create front directory for front-page

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,14 +2,27 @@
 @import 'base/variables';
 @import 'base/reset';
 @import 'base/initialize';
+// Front modules
+@import 'modules/front/header';
+@import 'modules/front/features';
+@import 'modules/front/about';
+@import 'modules/front/categories';
+@import 'modules/front/projects';
+@import 'modules/front/load-more';
+@import 'modules/front/partners';
+@import 'modules/front/cooperation';
+@import 'modules/front/information';
+@import 'modules/front/footer';
 // Modules
 @import 'modules/inputs';
 @import 'modules/btn';
 @import 'modules/extra';
+@import 'modules/navigation';
+@import 'modules/navbar';
 @import 'modules/search';
-@import 'modules/front';
 @import 'modules/blog';
 @import 'modules/comments';
 @import 'modules/author-profile';
 @import 'modules/gallery';
+@import 'modules/additional-styles';
 @import 'modules/blocks';
