--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -1,115 +1,65 @@
 /*
 =====================================
-List post style
-=====================================
-*/
-
-.list-post-style {
-  display: flex;
-  padding: 1rem 0;
-
-  &.list-post-dark {
-    .list-post-style-content {
-      a {
-        color: $color-gray-800;
-
-        &:hover {
-          color: $color-dark;
-        }
-      }
-
-      span {
-        color: $color-gray-500;
-      }
-    }
-  }
-
-  .list-post-style-img {
-    a {
-      display: block;
-      width: 5rem;
-      margin-left: 1rem;
-
-      img {
-        width: 100%;
-        height: 5rem;
-        border-radius: 50%;
-      }
-    }
-  }
-
-  .list-post-style-content {
-
-    h3 {
-      a {
-        font-size: 0.8rem;
-        color: $color-gray-300;
-
-        &:hover {
-          color: $color-white;
-        }
-      }
-    }
-
-    span {
-      font-size: 0.7rem;
-      color: $color-gray-600;
-    }
-  }
-}
-
-/*
-=====================================
 Header blog
 =====================================
 */
 
 #header-blog {
-  .heading-info {
-    padding-bottom: 6rem;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
 
-    // Breadcrumbs
-    .breadcrumbs {
-      margin-bottom: 0.5rem;
+  .container,
+  .container-fluid {
+    position: relative;
+    z-index: 3;
 
-      ul {
-        display: flex;
-        flex-direction: row;
+    .heading-info {
+      padding-bottom: 6rem;
 
-        li {
-          position: relative;
+      // Breadcrumbs
+      .breadcrumbs {
+        margin-bottom: 0.5rem;
+
+        ul {
           display: flex;
+          flex-direction: row;
 
-          &::after {
-            content: '\ea5a';
-            font-family: $font-family-icons;
-            font-size: 0.6rem;
-            color: $color-primary;
-            display: inline-block;
-            margin-right: 0.5rem;
-          }
+          li {
+            position: relative;
+            display: flex;
 
-          &:not(:last-child) {
-            margin-left: 0.5rem;
-          }
-
-          &:last-child::after {
-            display: none;
-          }
-
-          a,
-          span {
-            font-size: 0.7rem;
-            color: $color-gray-300;
-            display: block;
-
-            &:hover {
-              color: $color-white;
+            &::after {
+              content: '\ea5a';
+              font-family: $font-family-icons;
+              font-size: 0.6rem;
+              color: $color-primary;
+              display: inline-block;
+              margin-right: 0.5rem;
             }
-          }
 
-          span {
-            color: $color-primary !important;
+            &:not(:last-child) {
+              margin-left: 0.5rem;
+            }
+
+            &:last-child::after {
+              display: none;
+            }
+
+            a,
+            span {
+              font-size: 0.7rem;
+              color: $color-gray-300;
+              display: block;
+
+              &:hover {
+                color: $color-white;
+              }
+            }
+
+            span {
+              color: $color-primary !important;
+            }
           }
         }
       }
@@ -411,7 +361,7 @@ Blog content
   margin-bottom: 1rem;
 
   p {
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 
     em,
     i {
