move front to level up execution

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,7 +13,7 @@
 @import 'modules/front/cooperation';
 @import 'modules/front/information';
 @import 'modules/front/footer';
-// Modules
+// Core modules (blog)
 @import 'modules/inputs';
 @import 'modules/btn';
 @import 'modules/extra';
