--- a/src/css/modules/front/header.scss
+++ b/src/css/modules/front/header.scss
@@ -48,21 +48,26 @@ Header
     top: 50%;
     right: 2rem;
     transform: translateY(-50%);
-    display: flex;
-    flex-direction: column;
     z-index: 3;
-    /*border: 2px solid $color-white;;*/
     overflow: hidden;
     border-radius: 35px;
 
-    a {
-      color: $color-white;
-      font-size: 0.7rem;
-      padding: 0.25rem 0.5rem;
+    ul {
+      display: flex;
+      flex-direction: column;
 
-      &:hover {
-        background: $color-white;
-        color: $color-primary;
+      li {
+        a {
+          color: $color-white;
+          font-size: 0.7rem;
+          padding: 0.25rem 0.5rem;
+          display: block;
+    
+          &:hover {
+            background: $color-white;
+            color: $color-dark;
+          }
+        }
       }
     }
 
