--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,5 @@
-@import 'fonts.css';
+@import url('fonts.css');
+@import url('lineicons.css');
 
 body {
   font-family: 'yekan', sans-serif !important;
