fix admin.js media uploader

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -86,3 +86,10 @@ input:disabled {
     width: 100%;
   }
 }
+
+/* Wp media custom admin settings */
+
+#plugin_settings .image_preview {
+  max-width: 150px;
+  height: auto;
+}
