--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -280,8 +280,8 @@ Blog content
   }
 }
 
-// Post categories
-.post-categories {
+// Post category
+.post-category {
   position: absolute;
   right: 0;
   top: 0;
