--- a/src/css/modules/front/projects.scss
+++ b/src/css/modules/front/projects.scss
@@ -44,6 +44,8 @@ Projects
 
         // Post heading
         .post-heading {
+          margin-bottom: 0;
+
           h2 {
             font-size: 1.2rem;
             color: $color-white;
