--- a/src/css/modules/front/information.scss
+++ b/src/css/modules/front/information.scss
@@ -13,7 +13,7 @@ Information
     /* justify-content: center; */
     padding: 1.5rem 0;
 
-    &>i {
+    & i {
       font-size: 2.5rem;
       color: $color-primary;
     }
