fix categories single & index

--- a/src/css/modules/blog.scss
+++ b/src/css/modules/blog.scss
@@ -306,7 +306,7 @@ Blog content
 }
 
 // Post category (Without thumbnail)
-.post-category {
+.post-category-no-thumbnail {
   margin-bottom: 1rem;
   display: flex;
   flex-direction: row;
