--- a/src/css/modules/core/navigation.scss
+++ b/src/css/modules/core/navigation.scss
@@ -16,6 +16,35 @@ Navigation
   transition: transform 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
   z-index: 9;
 
+  &.dark {
+    background: $color-dark;
+    border-left: 1px solid $color-gray-800;
+
+    .logo {
+      h1 {
+        color: $color-white;
+      }
+
+      p {
+        color: $color-gray-400;
+      }
+    }
+
+    .navbar-menu {
+      ul {
+        li {
+          a {
+            color: $color-gray-400;
+
+            &:hover {
+              background: $color-gray-800;
+            }
+          }
+        }
+      }
+    }
+  }
+
   &.active {
     transition-delay: 0.6s;
     transform: translateX(0);
