add latest blog posts to front-page & add form structure to search

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,6 +17,7 @@
 @import 'modules/home/categories';
 @import 'modules/home/projects';
 @import 'modules/home/load-more';
+@import 'modules/home/latest-blog-posts';
 @import 'modules/home/partners';
 @import 'modules/home/cooperation';
 @import 'modules/home/information';
