organization hierarchy template-parts & projects posts

--- a/src/css/modules/home/projects.scss
+++ b/src/css/modules/home/projects.scss
@@ -9,23 +9,22 @@ Projects
   z-index: 1;
 
   .post {
+    position: relative;
+    
+    // Link
     .post-link {
       display: block;
       position: relative;
       overflow: hidden;
-
+      
+      // Image
       .post-image {
         img {
-          transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+          @include transition(all, 0.4s, cubic-bezier(0.785, 0.135, 0.15, 0.86));
         }
       }
 
-      &:hover {
-        .post-image img {
-          transform: scale(1.2);
-        }
-      }
-
+      // Content
       .post-content {
         position: absolute;
         top: 0;
@@ -42,9 +41,9 @@ Projects
         background: $color-dark-transparent-low;
         opacity: 0;
         visibility: hidden;
-        transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        @include transition(all, 0.4s, cubic-bezier(0.785, 0.135, 0.15, 0.86));
 
-        // Post heading
+        // Heading
         .post-heading {
           margin-bottom: 0;
 
@@ -53,19 +52,32 @@ Projects
             color: $color-white;
             opacity: 0;
             visibility: hidden;
-            transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-            transform: translateY(-8rem);
-            margin-bottom: 0.5rem;
+            @include transition(all, 0.4s, cubic-bezier(0.785, 0.135, 0.15, 0.86));
+            @include transform(translateY(2rem));
+            margin-bottom: 2rem;
+            position: relative;
+
+            &::after {
+              content: '';
+              position: absolute;
+              top: calc(100% + 1rem);
+              left: 50%;
+              width: 20%;
+              height: 5px;
+              background: $color-primary;
+              @include transform(translateX(-50%));
+            }
           }
 
+          // Categories
           .post-categories {
             display: flex;
             flex-direction: row;
             justify-content: center;
             opacity: 0;
             visibility: hidden;
-            transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-            transform: translateY(4rem);
+            @include transition(all, 0.6s, cubic-bezier(0.785, 0.135, 0.15, 0.86));
+            @include transform(translateY(2rem));
 
             span {
               color: $color-gray-100;
@@ -75,76 +87,66 @@ Projects
             }
           }
         }
+      }
+    }
 
-        .post-icons {
-          display: flex;
+    // Icons
+    .post-icons {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 3;
 
-          i {
-            width: 3rem;
-            height: 3rem;
-            background: $color-dark-transparent-low;
-            border-radius: 50%;
-            color: $color-primary;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0.5rem 0.25rem;
-            transition: all 0.4s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-            opacity: 0;
-            font-size: 1rem;
+      i {
+        border-radius: 50%;
+        color: $color-gray-100;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        @include transition(all, 0.6s, cubic-bezier(0.785, 0.135, 0.15, 0.86));
+        opacity: 1;
+        font-size: 1.6rem;
+        opacity: 0;
+        padding: 1rem;
+        @include transform(translateY(1rem));
+        cursor: zoom-in;
 
-            &:first-child {
-              transform: translateX(1rem);
-            }
+        &:hover {
+          color: $color-gray-400;
+        }
+      }
+    }
 
-            &:last-child {
-              transform: translateX(-1rem);
-            }
+    &:hover {
+      .post-image img {
+        @include transform(scale(1.2));
+      }
+
+      .post-content {
+        opacity: 1;
+        visibility: visible;
+
+        .post-heading {
+          position: relative;
+
+          h2 {
+            opacity: 1;
+            visibility: visible;
+            @include transform(translateY(0));
+          }
+
+          .post-categories {
+            opacity: 1;
+            visibility: visible;
+            @include transform(translateY(0));
           }
         }
       }
 
-      &:hover {
-        .post-content {
+      .post-icons {
+        i {
+          @include transform(translateY(0));
           opacity: 1;
-          visibility: visible;
-
-          .post-heading {
-            h2 {
-              opacity: 1;
-              visibility: visible;
-              transform: translateY(0);
-            }
-
-            .post-categories {
-              opacity: 1;
-              visibility: visible;
-              transform: translateY(0);
-            }
-          }
-
-          .post-icons {
-            i {
-              opacity: 1;
-              transform: translateY(0);
-
-              &:first-child:hover {
-                background: $color-primary;
-                color: $color-white;
-                cursor: zoom-in;
-
-                &~i {
-                  background: $color-dark-transparent-low;
-                  color: $color-primary;
-                }
-              }
-
-              &:last-child {
-                background: $color-primary;
-                color: $color-white;
-              }
-            }
-          }
         }
       }
     }
