--- a/src/css/modules/core/search.scss
+++ b/src/css/modules/core/search.scss
@@ -83,8 +83,11 @@ Search box
       top: 100%;
       right: 0;
       width: 100%;
+      max-height: 30rem;
       padding: 2rem;
       background: $color-gray-100;
+      overflow-y: auto;
+      overflow-x: hidden;
       z-index: 4;
       display: none;
     }
