--- a/src/css/modules/content/projects.scss
+++ b/src/css/modules/content/projects.scss
@@ -15,6 +15,8 @@ Projects
     .post-link {
       display: block;
       position: relative;
+      min-height: 200px;
+      background-color: $color-dark;
       overflow: hidden;
       
       // Image
