some security code

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -22,6 +22,7 @@
 @import 'modules/components/footer';
 @import 'modules/components/blocks';
 @import 'modules/components/information';
+@import 'modules/components/author-post-single';
 
 // Content
 @import 'modules/content/latest-blog-posts';
