--- a/src/css/modules/components/extra.scss
+++ b/src/css/modules/components/extra.scss
@@ -170,3 +170,28 @@ Holding table
     clear: both;
   }
 }
+
+/*
+=====================================
+Go to top
+=====================================
+*/
+
+#go-to-top {
+  position: fixed;
+  bottom: 0;
+  left: 2rem;
+  background: $color-darker;
+  color: $color-white;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+
+  &:hover {
+    color: $color-primary;
+  }
+}
