--- a/src/css/modules/content/post-styles.scss
+++ b/src/css/modules/content/post-styles.scss
@@ -331,7 +331,7 @@ Blog content
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
   cursor: default;
 
   span {
@@ -400,6 +400,7 @@ Blog content
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-top: 0.5rem;
 
   a {
     background: $color-gray-200;
@@ -686,32 +687,11 @@ Post little box
   display: block;
 
   &:hover {
-    background: $color-primary;
+    background: $color-gray-800;
 
     .post-thumbnail-little {
       img {
-        @include transform(scale(1.1) rotate(-2.5deg));
-        opacity: 0.9;
-      }
-    }
-
-    .post-heading-little {
-      span {
-        color: $color-gray-400;
-
-        i {
-          color: $color-white;
-        }
-      }
-    }
-
-    .post-options-little {
-      span {
-        color: $color-gray-400;
-
-        i {
-          color: $color-white;
-        }
+        opacity: 0.75;
       }
     }
   }
@@ -736,12 +716,10 @@ Post little box
     span {
       font-size: 0.7rem;
       color: $color-gray-300;
-      @include transition(all, 0.3s, ease-out);
 
       i {
         margin-left: 0.5rem;
         color: $color-primary;
-        @include transition(all, 0.3s, ease-out);
       }
     }
 
@@ -761,7 +739,6 @@ Post little box
       cursor: default;
       font-size: 0.7rem;
       color: $color-gray-500;
-      @include transition(all, 0.3s, ease-out);
 
       &:not(:last-child) {
         margin-left: 1rem;
@@ -773,7 +750,6 @@ Post little box
         font-size: 0.8rem;
         position: relative;
         top: 2px;
-        @include transition(all, 0.3s, ease-out);
       }
 
       em {
