add aos fade & php set max size upload

--- a/src/css/modules/components/extra.scss
+++ b/src/css/modules/components/extra.scss
@@ -190,6 +190,8 @@ Go to top
   justify-content: center;
   align-items: center;
   font-size: 0.8rem;
+  z-index: 8;
+  cursor: pointer;
 
   &:hover {
     color: $color-primary;
