--- a/src/css/modules/components/extra.scss
+++ b/src/css/modules/components/extra.scss
@@ -9,6 +9,7 @@ Parallax
 
   &::before {
     content: '';
+    background: $color-dark-transparent;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -184,8 +185,9 @@ Go to top
   background: $color-darker;
   color: $color-white;
   width: 3rem;
-  height: 3rem;
-  border-radius: 0.25rem;
+  height: 2.5rem;
+  border-top-right-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
   display: flex;
   justify-content: center;
   align-items: center;
