fix some template parts section

--- a/src/css/modules/content/features.scss
+++ b/src/css/modules/content/features.scss
@@ -6,7 +6,10 @@ Features
 
 #features {
   background: $color-primary;
-  padding: 6rem 0 3rem;
+  
+  .container {
+    padding: 6rem 0 3rem;
+  }
 
   .feature-box {
     margin-bottom: 3rem;
