--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: ایران تم - نوتریکا
-Theme URI: https://zhaket.com/store/web/irantheme
+Theme URI: https://irantheme.com/
 Author: the IRANTHEME team
 Author URI: https://irantheme.com/
 Description: قالب شرکتی وردپرس
-Tags: blog, one-column, custom-background, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, block-styles, wide-blocks, accessibility-ready
-Version: 1.0
+Tags: قالب شرکتی وردپرس, پوسته شرکتی وردپرس, قالب حرفه ای شرکتی وردپرس
+Version: 1.1
 Text Domain: zhobin
 */
